<resources>
    <string name="app_name">JoyDev Music Player</string>
    <string name="login_fragment_title">Вход</string>
    <string name="loginInputField_hint">Логин</string>
    <string name="passwordInputField_hint">Пароль</string>
    <string name="login_registration_hyperlink">Зарегистрироваться</string>
    <string name="login_inputButton">Войти</string>
    <string name="registration_fragment_title">Регистрация</string>
    <string name="emailInputField_hint">E-mail</string>
    <string name="repeatPasswordInputField_hint">Повторите пароль</string>
    <string name="registration_agreeRulesCheckBox_text">Согласен с правилами</string>
    <string name="registrationButton">Регистрация</string>
    <string name="registration_loginInput_hyperlink">Войти</string>
    <string name="main_play_from_url_button">Воспроизвести</string>
    <string name="music_list_update_button">Обновить список</string>
</resources>