<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/login_fragment_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_loginInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_loginInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginInputField_hint"
            android:textSize="28sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_loginInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_passwordInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordInputField_hint"
            android:textSize="28sp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_inputButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/login_inputButton"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_passwordInputLayout" />

    <TextView
        android:id="@+id/login_registration_hyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_registration_hyperlink"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_inputButton" />

</androidx.constraintlayout.widget.ConstraintLayout>