<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registration_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/registration_fragment_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_loginInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_loginInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginInputField_hint"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:textSize="28sp"
            android:maxLength="16"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_loginInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_emailInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailInputField_hint"
            android:inputType="textEmailAddress"
            android:textSize="28sp"
            android:maxLength="256"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_passwordInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordInputField_hint"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLength="16"
            android:maxLines="1"
            android:textSize="28sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_repeatPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_passwordInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_repeatPasswordInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeatPasswordInputField_hint"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLength="16"
            android:maxLines="1"
            android:textSize="28sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/registration_agreeRulesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registration_agreeRulesCheckBox_text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_repeatPasswordInputLayout" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/registrationButton"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_agreeRulesCheckBox" />

    <TextView
        android:id="@+id/registration_loginInput_hyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/registration_loginInput_hyperlink"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>